# learning-rust

./: Cargo.toml
async-traits/: Cargo.toml
async-traits/src/: lib.rs  main.rs
asynchronous/: Cargo.toml
asynchronous/src/: lib.rs  main.rs
box-for-heap/: Cargo.toml
box-for-heap/src/: main.rs
chapter3ex/: Cargo.toml
chapter3ex/src/: main.rs
chapter8ex/: Cargo.toml
chapter8ex/src/: main.rs
closure/src/: main.rs
concise-control-flow/: Cargo.toml
concise-control-flow/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
control-flow/: Cargo.toml
control-flow/src/: main.rs
data-types/: Cargo.toml
data-types/src/: main.rs
docs/: Cargo.toml  Notes.md
docs/src/: lib.rs
enums/src/: main.rs
error-handling/: Cargo.toml
error-handling/src/: main.rs
function/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
guessing-game/: Cargo.toml
guessing-game/src/: guess.rs  main.rs
hash-map/: Cargo.toml
hash-map/src/: main.rs
iterators/src/: main.rs
lifetime/: Cargo.toml
lifetime/src/: main.rs
match-construct/: Cargo.toml
match-construct/src/: main.rs
methods/: Cargo.toml
methods/src/: main.rs
minigrep/src/: lib.rs  main.rs
modules/src/: back_of_house.rs  front_of_house.rs  lib.rs
oop-features/: Cargo.toml
oop-features/src/: blog.rs  blog_idiomatic.rs  gui.rs  lib.rs  main.rs
ownership/src/: main.rs
ref-and-borrow/: Cargo.toml
ref-and-borrow/src/: main.rs
ref-count/: Cargo.toml
ref-count/src/: lib.rs  main.rs
src/: main.rs
test-organization/: Cargo.toml
tests/: TEST.md
(+16 files in other folders)
