[package]
name = "learning-rust"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "variables",
    "data-types",
    "function",
    "control-flow",
    "chapter3ex",
    "ownership",
    "ref-and-borrow",
    "slices",
    "structs",
    "methods",
    "enums",
    "match-construct",
    "concise-control-flow",
    "modules",
    "vector",
    "string",
    "hash-map",
    "chapter8ex",
    "error-handling",
    "guessing-game",
    "generics",
    "traits",
    "lifetime",
    "tests",
    "test-organization",
    "minigrep",
    "closure",
    "iterators",
    "docs",
    "box-for-heap"
]
